[tool.poetry]
name = "python-blob-storage"
version = "0.1.0"
description = "HTTP service for storing and retrieving files"
authors = ["decorator-factory <42166884+decorator-factory@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.16.0"
aiofiles = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"  # for starlette.TestClient

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
